--- a/Areas/Admin/Views/Banners/Details.cshtml
+++ b/Areas/Admin/Views/Banners/Details.cshtml
@@ -20,7 +20,7 @@
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.img" width="100px" /> <!--Lưu ý quyết định nd lưu imagePath trên csdl-->
+                <img src="~/Content/images/@Model.img" width="100px" alt="@Model.img"/>
             </div>
         </dd>
 
