--- a/Areas/Admin/Views/News/Create.cshtml
+++ b/Areas/Admin/Views/News/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h2> Create </h2>
 
-@using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "News", FormMethod.Post, new { enctype = "multipart/form-data", @id = "form-create" }))
 {
     @Html.AntiForgeryToken()
 
