--- a/Areas/Admin/Views/RoomImages/Details.cshtml
+++ b/Areas/Admin/Views/RoomImages/Details.cshtml
@@ -1,36 +1,30 @@
-﻿@model HoiTroWebsite.Models.Banner
+﻿@model HoiTroWebsite.Models.RoomImage
 
-@{
-    ViewBag.Title = "Delete";
-}
+<h2>Details</h2>
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Banner</h4>
+    <h4>RoomImage</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayName("Tên")
+            @Html.DisplayName("Của bài đăng")
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.name)
+            @Html.DisplayFor(model => model.RoomInfo.title)
         </dd>
-
         <dt>
             @Html.DisplayName("Ảnh")
         </dt>
 
         <dd>
             <div class="col-md-4">
-                <img src="~/Content/images/@Model.img" width="100px" alt="@Model.img" />
+                <img src="~/Content/images/@Model.imagePath" width="100px" alt="@Model.imagePath"/>
             </div>
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.meta)
+            @Html.DisplayName("meta")
         </dt>
 
         <dd>
@@ -60,15 +54,5 @@
         <dd>
             @Html.DisplayFor(model => model.datebegin)
         </dd>
-
     </dl>
-    @using (Html.BeginForm("DeleteConfirmed", "Banners", FormMethod.Post, new { id = "form-delete" }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.id) <!-- Ẩn trường id để lấy id -->
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" />
-        </div>
-    }
 </div>
